@startuml
'https://plantuml.com/class-diagram

interface GameStrategy{
 +applyStrategy(String name):void
}
class AttackStrategy{
 +applyStrategy(String name):void
}
class DefenseStrategy{
 +applyStrategy(String name):void
}
class Team {
String name
+applyCoachStrategy(GameStrategy strategy):void
}

 GameStrategy <|.. AttackStrategy
 GameStrategy <|.. DefenseStrategy




@enduml
